@@ -3,6 +3,7 @@ v3.0.9 - in progress
 	* Added a timestamp from clock_gettime() to all incoming packets (not on the network client yet)
 	* Fixed missing xbee_pktAnalogGet() and xbee_pktDigitalGet() functionality on Windows
 	* Fixed DLL version number on Windows
+	* Fixed broken ifdef around timespec definition
 
 v3.0.8 - 24 Dec 2012
 	* Fixed analog input values
